--- a/lab4/main.ipynb
+++ b/lab4/main.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "e967b4ff",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
     "from sklearn.pipeline import Pipeline\n",
     "from scipy.stats import randint\n",
     "from sklearn.exceptions import ConvergenceWarning\n",
-    "from sklearn.tree import DecisionTreeClassifier\n"
+    "from sklearn.tree import DecisionTreeClassifier, DecisionTreeRegressor\n"
    ]
   },
   {
@@ -817,15 +817,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "ddaea9d5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "from sklearn.tree import DecisionTreeRegressor\n",
-    "\n",
-    "\n",
     "class MyRandomForestRegressor(BaseRandomForest):\n",
     "    \"\"\"\n",
     "    Случайный лес для регрессии.\n",
